# cpm-ml

./: .gitignore
1-intro/: homework.ipynb  intro.ipynb
10-nlp-architectures/: train.ipynb
12-mlops/: Dockerfile  README.md  main.py  model.py  pyproject.toml  to_onnx.ipynb
12-mlops/model/: tkn
12-mlops/tests/: test_generation.py
2-linear/: homework.ipynb  linear.ipynb
3-stuff/: bank-additional-balanced.csv  features.ipynb  homework.ipynb  logreg.ipynb  metrics.ipynb  utils.py
4-trees/: ensembles.ipynb  homework.ipynb  tree.dot  tree.ipynb
5-nn/: 1-pytorch.ipynb  2-perceptron.ipynb  homework.ipynb
6-cnn/: conv.ipynb  homework.ipynb  mnist.ipynb
7-architectures/: autoencoder.ipynb
